--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/Nuevo.cshtml
@@ -13,6 +13,7 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdTipoFlujo)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id= "IdTransaccionSession" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
