--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ChequeBanco/Modificar.cshtml
@@ -297,7 +297,7 @@
             </div>
         </div>
     </div>
-
+    
     <div id="Tabs" role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
             <li class="active">
@@ -308,6 +308,9 @@
             </li>
             <li>
                 <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
+            </li>
+            <li>
+                <a href="#tab_flujo" aria-controls="vales" role="tab" data-toggle="tab">Flujo</a>
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
@@ -394,6 +397,22 @@
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
                 @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
             </div>
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="cb_Observacion">*</label>
+                                @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
     </div>
 
