--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoPlantilla/_GridViewPartial_TipoFlujoPlantilla.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoPlantilla/_GridViewPartial_TipoFlujoPlantilla.cshtml
@@ -66,8 +66,8 @@
                 if (Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "Estado")) == true)
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdGrupo = DataBinder.Eval(tc.DataItem, "IdPlantilla") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdGrupo = DataBinder.Eval(tc.DataItem, "IdPlantilla") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPlantilla = DataBinder.Eval(tc.DataItem, "IdPlantilla") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdPlantilla = DataBinder.Eval(tc.DataItem, "IdPlantilla") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
