--- a/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/DepositoBanco/Nuevo.cshtml
@@ -163,14 +163,6 @@ function GetListBancoPorSucursal() {
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label for="IdBanco_acreditacion">Tipo flujo*</label>
-                    @Html.Partial("_CmbFlujo_Deposito", Model.IdTipoFlujo)
-                    @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
-                </div>
-            </div>
             <div class="col-md-offset-4 col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
@@ -233,6 +225,9 @@ function GetListBancoPorSucursal() {
             <li>
                 <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
             </li>
+            <li>
+                <a href="#tab_flujo" aria-controls="vales" role="tab" data-toggle="tab">Flujo</a>
+            </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div class="tab-content" style="padding-top: 20px">
@@ -251,7 +246,24 @@ function GetListBancoPorSucursal() {
                 <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_diario">
                     @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
                 </div>
-            </div>
+           
+                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label for="cb_Observacion">*</label>
+                                    @Html.Action("GridViewPartial_flujo_det", new { Area = "Banco", Controller = "TipoFlujoBanco" })
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+             </div>
         </div>
     </div>
 
