--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/_GridViewPartial_flujo_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/_GridViewPartial_flujo_det.cshtml
@@ -70,6 +70,10 @@
             column.Caption = "Porcentaje";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(20);
+            column.SetDataItemTemplateContent(c =>
+            {
+                settings.ClientSideEvents.BeginCallback = "function(s, e) {CalcularValor();}";
+            });
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
@@ -82,6 +86,10 @@
             column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(20);
+            column.SetDataItemTemplateContent(c =>
+            {
+                settings.ClientSideEvents.BeginCallback = "function(s, e) {CalcularPorcentaje();}";
+            });
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
