--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/Nuevo.cshtml
@@ -42,14 +42,14 @@
                     @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-3">
+            @*<div class="col-md-3">
                 <div class="form-group">
                     <label for="IdBanco_acreditacion">Tipo flujo</label>
                     @Html.Partial("_CmbFlujo_ND_C", Model.IdTipoFlujo)
                     @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
                 </div>
-            </div>
-            <div class="col-md-offset-1 col-md-2">
+            </div>*@
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="cb_Fecha">Fecha:*</label>
                     <div class="input-group date">
@@ -57,14 +57,14 @@
                             <i class="fa fa-calendar"></i>
                         </div>
                         @Html.DevExpress().DateEditFor(q=> q.cb_Fecha, settings =>
-                    {
-                        settings.Name = "cb_Fecha";
-                        settings.Properties.UseMaskBehavior = true;
-                        settings.Properties.EditFormat = EditFormat.Date;
-                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                    }).GetHtml()
+                        {
+                            settings.Name = "cb_Fecha";
+                            settings.Properties.UseMaskBehavior = true;
+                            settings.Properties.EditFormat = EditFormat.Date;
+                            settings.Properties.EditFormatString = "dd/MM/yyyy";
+                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.cb_Fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -108,10 +108,25 @@
             <li class="active">
                 <a href="#tab_diario" aria-controls="vales" role="tab" data-toggle="tab">Diario</a>
             </li>
+            <li>
+                <a href="#tab_flujo" aria-controls="vales" role="tab" data-toggle="tab">Flujo</a>
+            </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_diario">
                 @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
+            </div>
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_flujo">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="TipoFlujo">Detalle</label>
+                                @Html.Action("GridViewPartial_flujo_det")
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
