--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoFlujoBanco/Nuevo.cshtml
@@ -77,3 +77,9 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+<script type="text/javascript">
+    function CalcularValor()
+    {
+        alert("sdf");
+    }
+</script>
