--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Modificar.cshtml
@@ -98,6 +98,13 @@
 
 
 <script>
+
+    $(function () {
+        cargar_procesos();
+        cargar_tipo_liquidacion_nomina();
+        cargar_periodos_x_nomina();
+    });
+
     $("#IdBanco").change(function () {
         $("#IdProceso").empty();
         cargar_procesos();
@@ -109,7 +116,6 @@
 
     });
     $("#IdNomina_TipoLiqui").change(function () {
-        $("#IdPeriodo").empty();
         cargar_periodos_x_nomina();
     });
     $("#IdPeriodo").change(function () {
@@ -146,7 +152,8 @@
 
 
 
-            function cargar_tipo_liquidacion_nomina() {
+    function cargar_tipo_liquidacion_nomina() {
+        $("#IdNomina_TipoLiqui").empty();
                 var datos = {
                     IdNomina: $("#IdNomina_Tipo").val()
                 }
@@ -173,6 +180,8 @@
 
 
     function cargar_periodos_x_nomina() {
+        $("#IdPeriodo").empty();
+
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdNomina: $("#IdNomina_Tipo").val(),
@@ -205,7 +214,6 @@
                     IdNomina_Tipo: $("#IdNomina_Tipo").val(),
                     IdNomina_TipoLiqui: $("#IdNomina_TipoLiqui").val(),
                     IdPeriodo: $("#IdPeriodo").val(),
-                    IdSucursal: $("#IdSucursal").val(),
                     IdTransaccionSession: $("#IdTransaccionSession").val()
 
                 }
@@ -228,10 +236,6 @@
     };
 
 
-    $(function () {
-        cargar_procesos();
-        cargar_tipo_liquidacion_nomina();
-        cargar_periodos_x_nomina();
-    });
+
 
 </script>
